# oxi-chat

./: .env  .gitignore  LICENSE  README.md  makefile.toml
client/: package.json  pnpm-lock.yaml  rollup.config.js
client/public/: index.html
client/src/: App.svelte  config.ts  store.ts
client/src/components/: Message.svelte  PrivateRoute.svelte  PrivateRouteGuard.svelte
client/src/pages/: Chat.svelte  Login.svelte  Register.svelte
client/src/utils/: fetchWithTimeout.ts  message.ts
server/: Cargo.toml
server/src/: init.sql  main.rs
server/src/auth/: handlers.rs  middleware.rs  mod.rs
server/src/environment/: argon.rs  config.rs  mod.rs
server/src/error/: handlers.rs  mod.rs
server/src/models/: mod.rs
server/src/models/client/: handlers.rs  mod.rs
server/src/models/login/: mod.rs
server/src/models/user/: handlers.rs  mod.rs
